feat：完善通用缓存方案

--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -34,6 +34,7 @@
 
 
 
+
 #### 2.2 对罗列目标分类
 - 回答完这些问题后，把你所列出的所有目标分成六个类，对学习知识分成四个类。**目标分类的作用，主要是为了让自己平衡生活和工作，均衡发展。知识分类的作用，主要是为了自己，学习有个优先级**。
 - 对目标分类：1、健康；2、修养/知识；3、爱情/家庭；4、事业/财富；5、朋友；6、社会。
@@ -47,7 +48,7 @@
 
 
 #### 2.4 过滤成3个目标
-- 选出在这一年里对你最重要的三个目标。从你所列出的目标里选择你最愿意投入的、最令你雀跃欲试的、最能令你满足的四件事，并把他们写下来。
+- 选出在这一年里对你最重要的三个目标。从你所列出的目标里选择你最愿意投入的、最令你雀跃欲试的、最能令你满足的三件事，并把他们写下来。
 - 现在我建议你明确地、扼要地、肯定地写下你实现它们的真正理由，告诉你自己能实现目标的把握和它们对你的重要性。
 - 如果你做事知道如何找出充分的理由，那你就无所不能，因为追求目标的动机比目标本身更能激励我们。
 
@@ -65,7 +66,8 @@
 
 
 #### 3.2 列出拥有资源
-- 列出你已经拥有的各种重要的资源。当你进行一个计划，就得知道该使用哪些工具。列出一张你所拥有资源的清单，里面包括自己的个性、朋友、财物、教育背景、时限、能力、以及其他。这份清单越详尽越好。
+- 列出你已经拥有的各种重要的资源。当你进行一个计划，就得知道该使用哪些工具。
+- 列出一张你所拥有资源的清单，里面包括自己的个性、朋友、财物、教育背景、时限、能力、以及其他。这份清单越详尽越好。
 
 
 #### 3.3 做完要去回顾
