--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -141,7 +141,19 @@
 
 
 #### 2.5 存储方案的不足
-- 
+- 存储方案SharedPreferences的不足
+    - 1.SP用内存层用HashMap保存，磁盘层则是用的XML文件保存。每次更改，都需要将整个HashMap序列化为XML格式的报文然后整个写入文件。
+    - 2.SP读写文件不是类型安全的，且没有发出错误信号的机制，缺少事务性API
+    - 3.commit() / apply()操作可能会造成ANR问题
+- 存储方案MMKV的不足
+    - 1.没有类型信息，不支持getAll。由于没有记录类型信息，MMKV无法自动反序列化，也就无法实现getAll接口。
+    - 2.需要引入so，增加包体积：引入MMKV需要增加的体积还是不少的。
+    - 3.文件只增不减：MMKV的扩容策略还是比较激进的，而且扩容之后不会主动trim size。
+- 存储方案DiskLruCache的不足
+    - 1.
+- 存储方案DataStore的不足
+    - 1.
+
 
 
 #### 2.6 使用缓存注意点
@@ -209,11 +221,19 @@
 #### 3.4 DiskLru原理分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
     - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
-
+    - 参考：https://gds.51cto.com/posts/176
 
 
 #### 3.5 DataStore分析
-
+- DataStore优势是异步Api
+    - DataStore 的主要优势之一是异步API，所以本身并未提供同步API调用，但实际上可能不一定始终能将周围的代码更改为异步代码。
+- 提出一个问题和思考
+    - 如果使用现有代码库采用同步磁盘 I/O，或者您的依赖项不提供异步API，那么如何将DataStore存储数据改成同步调用？
+- 使用阻塞式协程消除异步差异
+    - 使用 runBlocking() 从 DataStore 同步读取数据。runBlocking()会运行一个新的协程并阻塞当前线程直到内部逻辑完成，所以尽量避免在UI线程调用。
+- 频繁使用阻塞式协程会有问题吗
+    - 要注意的一点是，不用在初始读取时调用runBlocking，会阻塞当前执行的线程，因为初始读取会有较多的IO操作，耗时较长。
+    - 更为推荐的做法则是先异步读取到内存后，后续有需要可直接从内存中拿，而非运行同步代码阻塞式获取。
 
 
 
@@ -229,16 +249,40 @@
 
 ### 04.通用缓存方案思路
 #### 4.1 如何兼容不同缓存
-
+- 定义通用的存储接口
+    - 不同的存储方案，由于api不一样，所以难以切换操作。要是想兼容不同存储方案切换，就必须自己制定一个通用缓存接口。
+    - 定义接口，然后各个不同存储方案实现接口，重写抽象方法。调用的时候，获取接口对象调用api，这样就可以统一Api
+- 定义一个接口，这个接口有什么呢？
+    - 主要是存和取各种基础类型数据，比如saveInt/readInt；saveString/readString等通用抽象方法
 
 
 #### 4.2 打造通用缓存Api
+- 通用缓存Api设计思路：
+    - 通用一套api + 不同接口实现 + 代理类 + 工厂模型
+- 定义缓存的通用API接口，这里省略部分代码
+    ``` kotlin
+    interface ICacheable {
+        fun saveXxx(key: String, value: Int)
+        fun readXxx(key: String, default: Int = 0): Int
+        fun removeKey(key: String)
+        fun totalSize(): Long
+        fun clearData()
+    }
+    ```
+- 基于接口而非实现编程的设计思想
+    - 将接口和实现相分离，封装不稳定的实现，暴露稳定的接口。上游系统面向接口而非实现编程，不依赖不稳定的实现细节，这样当实现发生变化的时候，上游系统的代码基本上不需要做改动，以此来降低耦合性，提高扩展性。
+
 
 
 #### 4.3 切换不同缓存方式
+- 传入不同类型方便创建不同存储方式
+    - 隐藏存储方案创建具体细节，开发者只需要关心所需产品对应的工厂，无须关心创建细节，甚至无须知道具体存储方案的类名。需要符合开闭原则
+
 
 
 #### 4.4 缓存的过期处理
+- 如果你使用该库中的淘汰算法LRU相关功能，那么涉及到缓存过期处理
+    - 
 
 
 #### 4.5 缓存的阀值处理
@@ -256,7 +300,7 @@
 
 
 #### 4.8 缓存数据加密
-- 目前
+- 
 
 
 
@@ -265,7 +309,7 @@
 - 测试数据
     - 测试写入和读取。注意分别使用不同的方式，测试存储或获取相同的数据(数据为int类型数字，还有String类型长字符串)。然后查看耗时时间的长短……
 - 比较对象
-    - SharePreferences/DataStore/MMKV/LruDisk。使用华为手机测试
+    - SharePreferences/DataStore/MMKV/LruDisk/Room。使用华为手机测试
 - 测试数据案例1
     - 
 - 测试数据案例2
@@ -290,7 +334,10 @@
 
 
 #### 5.5 模块间依赖关系
-- 
+- 存储库依赖的关系
+    - MMKV需要依赖一些腾讯开源库的服务；DataStore存储需要依赖datastore相关的库；LruDisk存储需要依赖disk库
+    - 如果你要拓展其他的存储方案，则需要添加依赖。需要注意，添加的库使用compileOnly。
+
 
 
 
@@ -330,12 +377,49 @@
 
 
 #### 7.2 初始化缓存库
+- 通用存储库初始化
+    ``` java
+    CacheConfig.Builder builder = CacheConfig.Companion.newBuilder();
+    //设置是否是debug模式
+    CacheConfig cacheConfig = builder.debuggable(BuildConfig.DEBUG)
+            //设置外部存储根目录
+            .extraLogDir(null)
+            //设置lru缓存最大值
+            .maxCacheSize(100)
+            //内部存储根目录
+            .logDir(null)
+            //创建
+            .build();
+    CacheInitHelper.INSTANCE.init(MainApplication.getInstance(),cacheConfig);
+    //最简单的初始化
+    //CacheInitHelper.INSTANCE.init(CacheConfig.Companion.newBuilder().build());
+    ```
 
 
 #### 7.3 无缝切换各种缓存方案
 
 
+
+
 #### 7.4 数据的存和取
+- 存储数据和获取数据
+    ```
+    //存储数据
+    dataCache.saveBoolean("cacheKey1",true);
+    dataCache.saveFloat("cacheKey2",2.0f);
+    dataCache.saveInt("cacheKey3",3);
+    dataCache.saveLong("cacheKey4",4);
+    dataCache.saveString("cacheKey5","doubi5");
+    dataCache.saveDouble("cacheKey6",5.20);
+    
+    //获取数据
+    boolean data1 = dataCache.readBoolean("cacheKey1", false);
+    float data2 = dataCache.readFloat("cacheKey2", 0);
+    int data3 = dataCache.readInt("cacheKey3", 0);
+    long data4 = dataCache.readLong("cacheKey4", 0);
+    String data5 = dataCache.readString("cacheKey5", "");
+    double data6 = dataCache.readDouble("cacheKey5", 0.0);
+    ```
 
 
 ### 08.其他说明介绍
@@ -378,6 +462,7 @@
     - https://mp.weixin.qq.com/s/RLg1q1IxC-mYUNKgrZuZRg
 - 今日头条 ANR 优化实践系列 - 告别 SharedPreference 等待
     - https://mp.weixin.qq.com/s/kfF83UmsGM5w43rDCH544g
-
+- 【面试黑洞】Android 的键值对存储有没有最优解？
+    - https://blog.csdn.net/LSpQ35k7O5AJ21l1H9o/article/details/125437208
 
 
