feat：完善通用缓存方案

--- a/Read/ReadMeWiki/07.Jetpack/02.Navigation学习.md
+++ b/Read/ReadMeWiki/07.Jetpack/02.Navigation学习.md
@@ -47,7 +47,7 @@
 
 #### 1.2 学习方式
 - 最好的学习方式仍然是通过官方文档，下面是官方的学习地址：
-    - 谷歌官方教程：[Navigation Codelab](https://codelabs.developers.google.com/codelabs/android-navigation/#0)
+    - 谷歌官方教程：[Navigation Code](https://codelabs.developers.google.com/codelabs/android-navigation/#0)
     - 谷歌官方文档：[Navigation](https://developer.android.com/guide/navigation/)
     - 官方Demo：[Demo地址](https://github.com/googlecodelabs/android-navigation)
 - 这个教程Demo的优势
