--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -9,17 +9,17 @@
     - 2.1 缓存存储有哪些
     - 2.2 缓存策略有哪些
     - 2.3 常见存储方案
-    - 2.4 存储方案优缺点
+    - 2.4 市面存储方案说明
     - 2.5 存储方案的不足
-    - 2.6 使用缓存注意点
 - 03.存储方案原理
     - 3.1 Sp存储原理分析
     - 3.2 MMKV存储原理分析
-    - 3.3 LruCache原理分析
+    - 3.3 LruCache考量分析
     - 3.4 DiskLru原理分析
     - 3.5 DataStore分析
     - 3.6 HashMap存储分析
     - 3.7 Sqlite存储分析
+    - 3.8 使用存储的注意点
 - 04.通用缓存方案思路
     - 4.1 如何兼容不同缓存
     - 4.2 打造通用缓存Api
@@ -47,9 +47,11 @@
 - 07.通用Api设计
     - 7.1 如何依赖该库
     - 7.2 初始化缓存库
-    - 7.3 无缝切换各种缓存方案
+    - 7.3 切换各种缓存方案
     - 7.4 数据的存和取
     - 7.5 线程安全考量
+    - 7.6 查看缓存文件数据
+    - 7.7 如何选择合适方案
 - 08.其他说明介绍
     - 8.1 遇到的坑分析
     - 8.2 遗留的问题
@@ -75,6 +77,21 @@
     - 问题2：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
     - 问题3：各种缓存方案使用场景是什么？有什么缺陷，为了解决缺陷做了些什么？比如sp存在缺陷的替代方案是DataStore，为何这样？
     - 问题4：各种缓存方案，他们的缓存效率是怎样的？如何对比？接入该库后，如何做数据迁移，如何覆盖操作？
+- 思考一个K-V框架的设计
+    - 问题1-线程安全：使用K-V存储一般会在多线程环境中执行，因此框架有必要保证多线程并发安全，并且优化并发效率；
+    - 问题2-内存缓存：由于磁盘 IO 操作是耗时操作，因此框架有必要在业务层和磁盘文件之间增加一层内存缓存；
+    - 问题3-事务：由于磁盘 IO 操作是耗时操作，因此框架有必要将支持多次磁盘 IO 操作聚合为一次磁盘写回事务，减少访问磁盘次数；
+    - 问题4-事务串行化： 由于程序可能由多个线程发起写回事务，因此框架有必要保证事务之间的事务串行化，避免先执行的事务覆盖后执行的事务；
+    - 问题5-异步或同步写回： 由于磁盘 IO 是耗时操作，因此框架有必要支持后台线程异步写回；有时候又要求数据读写是同步的；
+    - 问题 6 - 增量更新： 由于磁盘文件内容可能很大，因此修改 K-V 时有必要支持局部修改，而不是全量覆盖修改；
+    - 问题 7 - 变更回调： 由于业务层可能有监听 K-V 变更的需求，因此框架有必要支持变更回调监听，并且防止出现内存泄漏；
+    - 问题 8 - 多进程： 由于程序可能有多进程需求，那么框架如何保证多进程数据同步？
+    - 问题 9 - 可用性： 由于程序运行中存在不可控的异常和 Crash，因此框架有必要尽可能保证系统可用性，尽量保证系统在遇到异常后的数据完整性；
+    - 问题 10 - 高效性： 性能永远是要考虑的问题，解析、读取、写入和序列化的性能如何提高和权衡；
+    - 问题 11 - 安全性： 如果程序需要存储敏感数据，如何保证数据完整性和保密性；
+    - 问题 12 - 数据迁移： 如果项目中存在旧框架，如何将数据从旧框架迁移至新框架，并且保证可靠性；
+    - 问题 13 - 研发体验： 是否模板代码冗长，是否容易出错。各种K—V框架使用体验如何？
+
 
 
 #### 1.3 基础概念介绍
@@ -109,7 +126,10 @@
 
 
 #### 2.2 缓存策略有哪些
-- 不论是内存缓存仍是磁盘缓存，缓存的容量都是有限制的，因此跟线程池满了以后的线程处理策略相似，当缓存容量达到设定的容量的时候，会根据制定的策略进行删除相应的元素。常见的策略有：
+- 缓存的核心思想主要是什么呢
+    - 一般来说，缓存核心步骤主要包含缓存的添加、获取和删除这三类操作。那么为什么还要删除缓存呢？不管是内存缓存还是硬盘缓存，它们的缓存大小都是有限的。
+    - 当缓存满了之后，再想其添加缓存，这个时候就需要删除一些旧的缓存并添加新的缓存。这个跟线程池满了以后的线程处理策略相似！
+- 缓存的常见的策略有那些
     - FIFO(first in first out)：先进先出策略，相似队列。
     - LFU(less frequently used)：最少使用策略，RecyclerView的缓存采用了此策略。
     - LRU(least recently used):最近最少使用策略，Glide在进行内存缓存的时候采用了此策略。
@@ -123,7 +143,7 @@
     - SharedPreferences，MMKV，DiskLruCache，SqlLite，DataStore，Room，Realm，GreenDao等等
 
 
-#### 2.4 存储方案优缺点
+#### 2.4 市面存储方案说明
 - 内存缓存
     - Map：内存缓存，一般用HashMap存储一些数据，主要存储一些临时的对象
     - LruCache：内存淘汰缓存，内部使用LinkedHashMap，会淘汰最长时间未使用的对象
@@ -156,18 +176,6 @@
 
 
 
-#### 2.6 使用缓存注意点
-- 在使用内存缓存的时候须要注意防止内存泄露，使用磁盘缓存的时候注意确保缓存的时效性
-- 针对SharedPreferences使用建议有：
-    - 因为 SharedPreferences 虽然是全量更新的模式，但只要把保存的数据用合适的逻辑拆分到多个不同的文件里，全量更新并不会对性能造成太大的拖累。
-    - 它设计初衷是轻量级，建议当存储文件中key-value数据超过30个，如果超过30个（这个只是一个假设），则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
-- 针对MMKV使用建议有：
-    - 
-- 针对DataStore使用建议有：
-    - 
-
-
-
 
 ### 03.存储方案原理
 #### 3.1 Sp存储原理分析
@@ -181,8 +189,6 @@
     - 建议不要存储较大数据；频繁修改的数据修改后统一提交而不是修改过后马上提交；在跨进程通讯中不去使用；键值对不宜过多
 - 读写操作性能分析
     - 第一次通过`Context.getSharedPreferences()`进行初始化时，对`xml`文件进行一次读取，并将文件内所有内容（即所有的键值对）缓到内存的一个`Map`中，接下来所有的读操作，只需要从这个`Map`中取就可以
-
-
 
 
 #### 3.2 MMKV存储原理分析
@@ -205,26 +211,35 @@
 
 
 
-#### 3.3 LruCache原理分析
+
+#### 3.3 LruCache考量分析
 - 在LruCache的源码中，关于LruCache有这样的一段介绍：
     - cache对象通过一个强引用来访问内容。每次当一个item被访问到的时候，这个item就会被移动到一个队列的队首。当一个item被添加到已经满了的队列时，这个队列的队尾的item就会被移除。
 - LruCache核心思想
     - LRU是近期最少使用的算法，它的核心思想是当缓存满时，会优先淘汰那些近期最少使用的缓存对象。采用LRU算法的缓存有两种：LrhCache和DiskLruCache，分别用于实现内存缓存和硬盘缓存，其核心思想都是LRU缓存算法。
-- put方法主要做了什么
-    - 需要传递两个参数：K和V，首先做了一下参数的判断，然后定义一个保存前一个Value值得临时变量，让putCount（put执行的次数）自增，让map的size大小自增。
-    - LruCache put方法，将键值对压入Map数据结构中，若这是Map的大小已经大于LruCache中定义的最大值，则将Map中最早压入的元素remove掉
-- get方法主要做了什么
-    - 具体来说，判断map中是否含有key值value值，若存在，则hitCount（击中元素数量）自增，并返回Value值，若没有击中，则执行create(key)方法，这里看到create方法是一个空的实现方法，返回值为null，所以可以重写该方法，在调用get（key）的时候若没有找到value值，则自动创建一个value值并压入map中。
+    - ![image](https://img-blog.csdnimg.cn/61733d7cefcc4f3c8a9115748d713522.png)
+- LruCache使用是计数or计量
+    - 使用计数策略：1、Message 消息对象池：最多缓存 50 个对象；2、OkHttp 连接池：默认最多缓存 5 个空闲连接；3、数据库连接池
+    - 使用计量策略：1、图片内存缓存；2、位图池内存缓存
+    - 那么思考一下如何理解 计数 or 计量 ？针对计数策略使用Lru仅仅只统计缓存单元的个数，针对计量则要复杂一点。
+- LruCache策略能否增加灵活性
+    - 在缓存容量满时淘汰，除了这个策略之外，能否再增加一些辅助策略，例如在 Java 堆内存达到某个阈值后，对 LruCache 使用更加激进的清理策略。
+    - 比如：Glide 除了采用 LRU 策略淘汰最早的数据外，还会根据系统的内存紧张等级 onTrimMemory(level) 及时减少甚至清空 LruCache。
+    - 关于Lru更多的原理解读，可以看：[AppLruCache](https://github.com/yangchong211/YCCommonLib/tree/master/AppLruCache)
 
 
 
 #### 3.4 DiskLru原理分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
     - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
+- 
     - 参考：https://gds.51cto.com/posts/176
 
 
+
 #### 3.5 DataStore分析
+- 为何会有DataStore
+    - DataStore 被创造出来的目标就是替代 Sp，而它解决的 SharedPreferences 最大的问题有两点：一是性能问题，二是回调问题。
 - DataStore优势是异步Api
     - DataStore 的主要优势之一是异步API，所以本身并未提供同步API调用，但实际上可能不一定始终能将周围的代码更改为异步代码。
 - 提出一个问题和思考
@@ -245,6 +260,19 @@
 #### 3.7 Sqlite存储分析
 - 注意：缓存的数据库是存放在/data/data/databases/目录下，是占用内存空间的，如果缓存累计，容易浪费内存，需要及时清理缓存。
 
+
+
+#### 3.8 使用缓存注意点
+- 在使用内存缓存的时候须要注意防止内存泄露，使用磁盘缓存的时候注意确保缓存的时效性
+- 针对SharedPreferences使用建议有：
+    - 因为 SharedPreferences 虽然是全量更新的模式，但只要把保存的数据用合适的逻辑拆分到多个不同的文件里，全量更新并不会对性能造成太大的拖累。
+    - 它设计初衷是轻量级，建议当存储文件中key-value数据超过30个，如果超过30个（这个只是一个假设），则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
+- 针对MMKV使用建议有：
+    - 如果项目中有高频率，同步存储数据，使用MMKV更加友好。
+- 针对DataStore使用建议有：
+    - 
+- 针对LruCache缓存使用建议：
+    - 如果你使用“计量”淘汰策略，需要重写 SystemLruCache#sizeOf() 测量缓存单元的内存占用量，否则缓存单元的大小默认视为 1，相当于 maxSize 表示的是最大缓存数量。
 
 
 ### 04.通用缓存方案思路
@@ -277,7 +305,7 @@
 #### 4.3 切换不同缓存方式
 - 传入不同类型方便创建不同存储方式
     - 隐藏存储方案创建具体细节，开发者只需要关心所需产品对应的工厂，无须关心创建细节，甚至无须知道具体存储方案的类名。需要符合开闭原则
-
+- 那么具体该怎么实现呢？
 
 
 #### 4.4 缓存的过期处理
@@ -289,18 +317,31 @@
 
 
 #### 4.6 缓存的线程安全性
-- 缓存虽好，用起来很快捷方便，但在使用过程中，大家一定要注意数据更新和线程安全，不要出现脏数据。
+- 为何要强调缓存方案线程安全性
+    - 缓存虽好，用起来很快捷方便，但在使用过程中，大家一定要注意数据更新和线程安全，不要出现脏数据。
+- 针对Lru中使用LinkedHashMap读写不安全情况
+    - 保证LruCache的线程安全，在put，get等核心方法中，添加synchronized锁。这里主要是synchronized (this){ put操作 }
+- 针对DiskLruCache读写不安全的情况
+    - 待完善
+
 
 
 #### 4.7 缓存数据的迁移
 - 如何将Sp数据迁移到DataStore
-    - 1
+    - 通过属性委托的方式创建DataStore，基于已有的SharedPreferences文件进行创建DataStore。将sp文件名，以参数的形式传入preferencesDataStore，DataStore会自动将该文件中的数据进行转换。
+    ```
+    val Context.dataStore: DataStore<Preferences> by preferencesDataStore(
+        name = "user_info",
+        produceMigrations = { context ->
+            listOf(SharedPreferencesMigration(context, "sp_file_name"))
+        })
+    ```
 - 如何将sp数据迁移到MMKV
-    - 1
+    - 
 
 
 #### 4.8 缓存数据加密
-- 
+- 思考一下，如果让你去设计数据的加密，你该怎么做？
 
 
 
@@ -396,7 +437,7 @@
     ```
 
 
-#### 7.3 无缝切换各种缓存方案
+#### 7.3 切换各种缓存方案
 
 
 
@@ -420,6 +461,33 @@
     String data5 = dataCache.readString("cacheKey5", "");
     double data6 = dataCache.readDouble("cacheKey5", 0.0);
     ```
+
+
+#### 7.5 线程安全考量
+
+
+
+#### 7.6 查看缓存文件数据
+- android缓存路径查看方法有哪些呢？
+    - 将手机打开开发者模式并连接电脑，在pc控制台输入cd /data/data/目录，使用adb主要是方便测试(删除，查看，导出都比较麻烦)。
+    - 如何简单快速，傻瓜式的查看缓存文件，操作缓存文件，那么该项目小工具就非常有必要呢！采用可视化界面读取缓存数据，方便操作，直观也简单。
+- 一键接入该工具
+    - FileExplorerActivity.startActivity(this);
+    - 开源项目地址：https://github.com/yangchong211/YCAndroidTool
+- 查看缓存文件数据如下所示
+    - ![image](https://img-blog.csdnimg.cn/69fa3fcbe30f455fa2eecc520b0bad86.png)
+
+
+
+#### 7.7 如何选择合适方案
+- 比如常见的缓存、浏览器缓存、图片缓存、线程池缓存、或者WebView资源缓存等等
+    - 那就可以选择LRU+缓存淘汰算法。它的核心思想是当缓存满时，会优先淘汰那些近期最少使用的缓存对象。
+- 比如针对高频率，同步存储，或者跨进程等存储数据的场景
+    - 那就可以选择MMKV这种存储方案。它的核心思想就是高速存储数据，且不会阻塞主线程卡顿。
+- 比如针对存储表结构，或者一对多这类的数据
+    - 那就可以选择DataStore，Room，GreenDao等存储库方案。
+- 比如针对存储少量用户类数据
+    - 其实也可以将json转化为字符串，然后选择sp，mmkv，lruDisk等等都可以。
 
 
 ### 08.其他说明介绍
