feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -34,8 +34,7 @@
     - 5.1 整体架构图
     - 5.2 UML设计图
     - 5.3 关键流程图
-    - 5.4 接口设计图
-    - 5.5 模块间依赖关系
+    - 5.4 模块间依赖关系
 - 06.其他设计说明
     - 6.1 性能设计说明
     - 6.2 稳定性设计
@@ -68,6 +67,7 @@
     - 针对不同场景选择什么缓存方式，同时思考如何替换之前老的存储方案，而不用花费很大的时间成本！
 - 针对不同的业务场景，不同的缓存方案。打造一套通用的方案
     - 屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，外部开发者简化使用，提高开发效率和使用效率……
+    - ![image](https://img-blog.csdnimg.cn/2856f02f85204c259d80fae75274e0e4.png)
 
 
 
@@ -81,16 +81,19 @@
     - 问题1-线程安全：使用K-V存储一般会在多线程环境中执行，因此框架有必要保证多线程并发安全，并且优化并发效率；
     - 问题2-内存缓存：由于磁盘 IO 操作是耗时操作，因此框架有必要在业务层和磁盘文件之间增加一层内存缓存；
     - 问题3-事务：由于磁盘 IO 操作是耗时操作，因此框架有必要将支持多次磁盘 IO 操作聚合为一次磁盘写回事务，减少访问磁盘次数；
-    - 问题4-事务串行化： 由于程序可能由多个线程发起写回事务，因此框架有必要保证事务之间的事务串行化，避免先执行的事务覆盖后执行的事务；
-    - 问题5-异步或同步写回： 由于磁盘 IO 是耗时操作，因此框架有必要支持后台线程异步写回；有时候又要求数据读写是同步的；
-    - 问题 6 - 增量更新： 由于磁盘文件内容可能很大，因此修改 K-V 时有必要支持局部修改，而不是全量覆盖修改；
-    - 问题 7 - 变更回调： 由于业务层可能有监听 K-V 变更的需求，因此框架有必要支持变更回调监听，并且防止出现内存泄漏；
-    - 问题 8 - 多进程： 由于程序可能有多进程需求，那么框架如何保证多进程数据同步？
-    - 问题 9 - 可用性： 由于程序运行中存在不可控的异常和 Crash，因此框架有必要尽可能保证系统可用性，尽量保证系统在遇到异常后的数据完整性；
-    - 问题 10 - 高效性： 性能永远是要考虑的问题，解析、读取、写入和序列化的性能如何提高和权衡；
-    - 问题 11 - 安全性： 如果程序需要存储敏感数据，如何保证数据完整性和保密性；
-    - 问题 12 - 数据迁移： 如果项目中存在旧框架，如何将数据从旧框架迁移至新框架，并且保证可靠性；
-    - 问题 13 - 研发体验： 是否模板代码冗长，是否容易出错。各种K—V框架使用体验如何？
+    - 问题4-事务串行化：由于程序可能由多个线程发起写回事务，因此框架有必要保证事务之间的事务串行化，避免先执行的事务覆盖后执行的事务；
+    - 问题5-异步或同步写回：由于磁盘 IO 是耗时操作，因此框架有必要支持后台线程异步写回；有时候又要求数据读写是同步的；
+    - 问题6-增量更新：由于磁盘文件内容可能很大，因此修改 K-V 时有必要支持局部修改，而不是全量覆盖修改；
+    - 问题7-变更回调：由于业务层可能有监听 K-V 变更的需求，因此框架有必要支持变更回调监听，并且防止出现内存泄漏；
+    - 问题8-多进程：由于程序可能有多进程需求，那么框架如何保证多进程数据同步？
+    - 问题9-可用性：由于程序运行中存在不可控的异常和 Crash，因此框架有必要尽可能保证系统可用性，尽量保证系统在遇到异常后的数据完整性；
+    - 问题10-高效性：性能永远是要考虑的问题，解析、读取、写入和序列化的性能如何提高和权衡；
+    - 问题11-安全性：如果程序需要存储敏感数据，如何保证数据完整性和保密性；
+    - 问题12-数据迁移：如果项目中存在旧框架，如何将数据从旧框架迁移至新框架，并且保证可靠性；
+    - 问题13-研发体验：是否模板代码冗长，是否容易出错。各种K—V框架使用体验如何？
+- 常见存储框架设计思考导图
+    - ![image](https://img-blog.csdnimg.cn/4e3fb1b9c2b74503a0e0d025b4d74607.png)
+
 
 
 
@@ -111,6 +114,8 @@
 #### 1.5 产生收益分析
 - 统一缓存API兼容不同存储方案
     - 打造通用api，抹平了sp，mmkv，sql，lru，dataStore等各种方案的差异性。简化开发者使用，功能强大而使用简单！
+    - ![image](https://img-blog.csdnimg.cn/86cf16c86fd14aee95091fe8b1869e97.png)
+
 
 
 ### 02.市面存储方案
@@ -232,8 +237,8 @@
 #### 3.4 DiskLru原理分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
     - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
-- 
-    - 参考：https://gds.51cto.com/posts/176
+- DiskLruCache缓存基础原理流程图
+    - ![image](https://img-blog.csdnimg.cn/dfa425359ffb4e24a5796f1c1a95986b.png)
 
 
 
@@ -275,6 +280,7 @@
     - 如果你使用“计量”淘汰策略，需要重写 SystemLruCache#sizeOf() 测量缓存单元的内存占用量，否则缓存单元的大小默认视为 1，相当于 maxSize 表示的是最大缓存数量。
 
 
+
 ### 04.通用缓存方案思路
 #### 4.1 如何兼容不同缓存
 - 定义通用的存储接口
@@ -306,23 +312,53 @@
 - 传入不同类型方便创建不同存储方式
     - 隐藏存储方案创建具体细节，开发者只需要关心所需产品对应的工厂，无须关心创建细节，甚至无须知道具体存储方案的类名。需要符合开闭原则
 - 那么具体该怎么实现呢？
+    - 看到下面代码是不是有种很熟悉的感觉，没错，正是使用了工厂模式，灵活切换不同的缓存方式。但针对应用层调用api却感知不到影响。
+    ``` java
+    public static ICacheable getCacheImpl(Context context, @CacheConstants.CacheType int type) {
+        if (type == CacheConstants.CacheType.TYPE_DISK) {
+            return DiskFactory.create().createCache(context);
+        } else if (type == CacheConstants.CacheType.TYPE_LRU) {
+            return LruCacheFactory.create().createCache(context);
+        } else if (type == CacheConstants.CacheType.TYPE_MEMORY) {
+            return MemoryFactory.create().createCache(context);
+        } else if (type == CacheConstants.CacheType.TYPE_MMKV) {
+            return MmkvFactory.create().createCache(context);
+        } else if (type == CacheConstants.CacheType.TYPE_SP) {
+            return SpFactory.create().createCache(context);
+        } else if (type == CacheConstants.CacheType.TYPE_STORE) {
+            return StoreFactory.create().createCache(context);
+        } else {
+            return MmkvFactory.create().createCache(context);
+        }
+    }
+    ```
 
 
 #### 4.4 缓存的过期处理
-- 如果你使用该库中的淘汰算法LRU相关功能，那么涉及到缓存过期处理
-    - 
+- 说一个使用场景
+    - 比如你准备做WebView的资源拦截缓存，针对模版页面，为了提交加载速度。会缓存css，js，图片等资源到本地。那么如何选择存储方案，如何处理过期问题？
+- 思考一下该问题
+    - 比如WebView缓存方案是数据库存储，db文件。针对缓存数据，猜想思路可能是Lru策略，或者标记时间清除过期文件。
+- 那么缓存过期处理的策略有哪些
+    - 定时过期：每个设置过期时间的key都需要创建⼀个定时器，到过期时间就会立即清除。
+    - 惰性过期：只有当访问⼀个 key 时，才会判断该key是否已过期，过期则清除。
+    - 定期过期：每隔⼀定的时间，会扫描⼀定数量的数据库的 expires 字典中⼀定数量的key（是随机的）， 并 清除其中已过期的key 。
+    - 分桶策略：定期过期的优化，将过期时间点相近的 key 放在⼀起，按时间扫描分桶。
+
 
 
 #### 4.5 缓存的阀值处理
 
 
+
 #### 4.6 缓存的线程安全性
 - 为何要强调缓存方案线程安全性
     - 缓存虽好，用起来很快捷方便，但在使用过程中，大家一定要注意数据更新和线程安全，不要出现脏数据。
-- 针对Lru中使用LinkedHashMap读写不安全情况
+- 针对LruCache中使用LinkedHashMap读写不安全情况
     - 保证LruCache的线程安全，在put，get等核心方法中，添加synchronized锁。这里主要是synchronized (this){ put操作 }
 - 针对DiskLruCache读写不安全的情况
-    - 待完善
+    - DiskLruCache 管理多个 Entry（key-values），因此锁粒度应该是 Entry 级别的。
+    - get 和 edit 方法都是同步方法，保证内部的 Entry Map 的安全访问，是保证线程安全的第一步。
 
 
 
@@ -337,13 +373,24 @@
         })
     ```
 - 如何将sp数据迁移到MMKV
-    - 
+    - MMKV 提供了 importFromSharedPreferences() 函数，可以比较方便地迁移数据过来。
+    - MMKV 还额外实现了一遍 SharedPreferences、SharedPreferences.Editor 这两个 interface。
+    ``` java
+    MMKV preferences = MMKV.mmkvWithID("myData");
+    // 迁移旧数据
+    {
+        SharedPreferences old_man = getSharedPreferences("myData", MODE_PRIVATE);
+        preferences.importFromSharedPreferences(old_man);
+        old_man.edit().clear().commit();
+    }
+    ```
+- 思考一下，MMKV框架实现了sp的两个接口，即磨平了数据迁移差异性
+    - 那么使用这个方式，借鉴该思路，你能否尝试用该方法，去实现LruDiskCache方案的sp数据一键迁移。
+
 
 
 #### 4.8 缓存数据加密
 - 思考一下，如果让你去设计数据的加密，你该怎么做？
-
-
 
 
 #### 4.9 缓存效率的对比
@@ -352,9 +399,12 @@
 - 比较对象
     - SharePreferences/DataStore/MMKV/LruDisk/Room。使用华为手机测试
 - 测试数据案例1
-    - 
+    - ![image](https://img-blog.csdnimg.cn/img_convert/9f84f82f861160a09a939eaaaaeb0f23.gif)
+    - ![image](https://img-blog.csdnimg.cn/img_convert/ae9847eaa2e9e4c3bfd10a58b5e49b17.gif)
+    - 在主线程中测试数据，同步耗时时间(主线程还有其他的耗时)跟异步场景有较大差别。
 - 测试数据案例2
-    - 
+    - ![image](https://img-blog.csdnimg.cn/img_convert/33ac1848a9c8162749003459fdff8c90.gif)
+    - 测试1000组长字符串数据，MMKV 就不具备优势了，反而成了耗时最久的；而这时候的冠军就成了 DataStore，并且是遥遥领先。
 - 最后思考说明
     - 从最终的数据来看，这几种方案都不是很慢。虽然这半秒左右的主线程耗时看起来很可怕，但是要知道这是 1000 次连续写入的耗时。
     - 而在真正写程序的时候，怎么会一次性做 1000 次的长字符串的写入？所以真正在项目中的键值对写入的耗时，不管你选哪个方案，都会比这份测试结果的耗时少得多的，都少到了可以忽略的程度，这是关键。
@@ -363,28 +413,33 @@
 
 ### 05.方案基础设计
 #### 5.1 整体架构图
+- 统一存储方案的架构图
+    - ![image](https://img-blog.csdnimg.cn/d8e2ddbdcd41421894b943a68b723dfe.png)
+
 
 
 #### 5.2 UML设计图
+- 通用存储方案UML设计图
+    - ![image](https://img-blog.csdnimg.cn/26bfd640e5b9473085b7c42bd6ac2e83.png)
+
 
 
 #### 5.3 关键流程图
+- mmap的零拷贝流程图
+    - ![image](https://img-blog.csdnimg.cn/ba0695f9440040b282a7a0387d3259a7.png)
 
 
-#### 5.4 接口设计图
 
-
-#### 5.5 模块间依赖关系
+#### 5.4 模块间依赖关系
 - 存储库依赖的关系
     - MMKV需要依赖一些腾讯开源库的服务；DataStore存储需要依赖datastore相关的库；LruDisk存储需要依赖disk库
-    - 如果你要拓展其他的存储方案，则需要添加依赖。需要注意，添加的库使用compileOnly。
+    - 如果你要拓展其他的存储方案，则需要添加其依赖。需要注意，添加的库使用compileOnly。
 
 
 
 
 ### 06.其他设计说明
 #### 6.1 性能设计
-- 
 
 
 
@@ -402,7 +457,7 @@
     - 遇到问题：不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
     - 问题分析：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
     - 如何解决：在项目中只在顶层调用一次 preferencesDataStore 方法，这样可以更轻松地将 DataStore 保留为单例。
-
+- 
 
 
 
@@ -415,6 +470,10 @@
 
 ### 07.通用Api设计
 #### 7.1 如何依赖该库
+- 依赖该库如下所示
+    ``` java
+    
+    ```
 
 
 #### 7.2 初始化缓存库
@@ -438,7 +497,9 @@
 
 
 #### 7.3 切换各种缓存方案
+```
 
+```
 
 
 
@@ -461,13 +522,11 @@
     String data5 = dataCache.readString("cacheKey5", "");
     double data6 = dataCache.readDouble("cacheKey5", 0.0);
     ```
-
-
-#### 7.5 线程安全考量
+- 也可以通过注解的方式存储数据
 
 
 
-#### 7.6 查看缓存文件数据
+#### 7.5 查看缓存文件数据
 - android缓存路径查看方法有哪些呢？
     - 将手机打开开发者模式并连接电脑，在pc控制台输入cd /data/data/目录，使用adb主要是方便测试(删除，查看，导出都比较麻烦)。
     - 如何简单快速，傻瓜式的查看缓存文件，操作缓存文件，那么该项目小工具就非常有必要呢！采用可视化界面读取缓存数据，方便操作，直观也简单。
@@ -479,7 +538,7 @@
 
 
 
-#### 7.7 如何选择合适方案
+#### 7.6 如何选择合适方案
 - 比如常见的缓存、浏览器缓存、图片缓存、线程池缓存、或者WebView资源缓存等等
     - 那就可以选择LRU+缓存淘汰算法。它的核心思想是当缓存满时，会优先淘汰那些近期最少使用的缓存对象。
 - 比如针对高频率，同步存储，或者跨进程等存储数据的场景
@@ -490,12 +549,12 @@
     - 其实也可以将json转化为字符串，然后选择sp，mmkv，lruDisk等等都可以。
 
 
+
 ### 08.其他说明介绍
 #### 8.1 遇到的坑分析
-- Sp在存储大量数据可能造成ANR
-    - commit() / apply()操作可能会造成ANR问题
-        - commit()是同步提交，会在UI主线程中直接执行IO操作，当写入操作耗时比较长时就会导致UI线程被阻塞，进而产生ANR；
-        - apply()虽然是异步提交，但异步写入磁盘时，如果执行了Activity / Service中的onStop()方法，那么一样会同步等待SP写入完毕，等待时间过长时也会引起ANR问题。
+- Sp存储数据commit() / apply()操作可能会造成ANR问题
+    - commit()是同步提交，会在UI主线程中直接执行IO操作，当写入操作耗时比较长时就会导致UI线程被阻塞，进而产生ANR；
+    - apply()虽然是异步提交，但异步写入磁盘时，如果执行了Activity / Service中的onStop()方法，那么一样会同步等待SP写入完毕，等待时间过长时也会引起ANR问题。
     - 首先分析一下SharedPreferences源码中apply方法
         > SharedPreferencesImpl#apply()，这个方法主要是将记录的数据同步写到Map集合中，然后在开启子线程将数据写入磁盘
         > SharedPreferencesImpl#enqueueDiskWrite()，这个会将runnable被写入了队列，然后在run方法中写数据到磁盘
@@ -505,7 +564,7 @@
         > ActivityThread#handlePauseActivity()#QueuedWork.waitToFinish()，这个是等待QueuedWork所有任务处理完的逻辑
         > QueuedWork#waitToFinish()，这个里面会通过handler查询MSG_RUN消息是否有，如果有则会waiting等待
     - 那么最后得出的结论是
-        - handlePauseActivity()的时候会一直等待 apply() 方法将数据保存成功，否则会一直等待，从而阻塞主线程造成 ANR。
+        - handlePauseActivity()的时候会一直等待 apply() 方法将数据保存成功，否则会一直等待，从而阻塞主线程造成 ANR。但普通存储的场景，这种可能性很小。
 
 
 
