feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -344,6 +344,7 @@
     - 惰性过期：只有当访问⼀个 key 时，才会判断该key是否已过期，过期则清除。
     - 定期过期：每隔⼀定的时间，会扫描⼀定数量的数据库的 expires 字典中⼀定数量的key（是随机的）， 并 清除其中已过期的key 。
     - 分桶策略：定期过期的优化，将过期时间点相近的 key 放在⼀起，按时间扫描分桶。
+    - ![image](https://img-blog.csdnimg.cn/a95fadf234674abfa8c5db7c98d65535.png)
 
 
 
@@ -440,10 +441,14 @@
 
 ### 06.其他设计说明
 #### 6.1 性能设计
-
+- 
 
 
 #### 6.2 稳定性设计
+- 针对多进程初始化
+    - 遇到问题：对于多进程在Application的onCreate创建几次，导致缓存存储库初始化了多次。
+    - 问题分析：该场景不是该库的问题，建议判断是否是主进程，如果是则进行初始化。
+    - 如何解决：思路是获取当前进程名，并与主进程对比，来判断是否为主进程。具体可以参考：[优雅判断是否是主进程](https://github.com/yangchong211/YCCommonLib/blob/master/ToolUtilsLib/src/main/java/com/yc/toolutils/AppProcessUtils.java)
 
 
 #### 6.3 灰度设计
@@ -452,13 +457,12 @@
 #### 6.4 降级设计
 
 
+
 #### 6.5 异常设计说明
 - DataStore初始化遇到的坑
     - 遇到问题：不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
     - 问题分析：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
     - 如何解决：在项目中只在顶层调用一次 preferencesDataStore 方法，这样可以更轻松地将 DataStore 保留为单例。
-- 
-
 
 
 #### 6.6 兼容性设计
@@ -497,9 +501,11 @@
 
 
 #### 7.3 切换各种缓存方案
-```
-
-```
+- 如何调用api切换各种缓存方案
+    ``` java
+    //这里可以填写不同的type
+    val cacheImpl = CacheFactoryUtils.getCacheImpl(CacheConstants.CacheType.TYPE_SP)
+    ```
 
 
 
