feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -62,7 +62,7 @@
 ### 01.整体概述说明
 #### 1.1 项目背景介绍
 - 项目中很多地方使用缓存方案
-    - 有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？
+    - 有的用`sp`，有的用`mmkv`，有的用`lru`，有的用`DataStore`，有的用`sqlite`，如何打造通用api切换操作不同存储方案？
 - 缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？
     - 针对不同场景选择什么缓存方式，同时思考如何替换之前老的存储方案，而不用花费很大的时间成本！
 - 针对不同的业务场景，不同的缓存方案。打造一套通用的方案
@@ -99,7 +99,7 @@
 
 #### 1.3 基础概念介绍
 - 最初缓存的概念
-    - 提及缓存，可能很容易想到Http的缓存机制，LruCache，其实缓存最初是针对于网络而言的，也是狭义上的缓存，广义的缓存是指对数据的复用。
+    - 提及缓存，可能很容易想到Http的缓存机制，`LruCache`，其实缓存最初是针对于网络而言的，也是狭义上的缓存，广义的缓存是指对数据的复用。
 - 缓存容量，就是缓存的大小
     - 每一种缓存，总会有一个最大的容量，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
 
@@ -108,7 +108,7 @@
 - 打造通用存储库：
     - 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
 - 内部开源该库：
-    - 作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口。
+    - **作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口**。
 
 
 #### 1.5 产生收益分析
@@ -127,7 +127,8 @@
 - 磁盘缓存：
     - 读取磁盘文件要比直接从内存缓存中读取要慢一些，而且需要在一个UI主线程外的线程中进行，因为磁盘的读取速度是不能够保证的，磁盘文件缓存显然也是一种以空间换时间的策略。
 - 二级缓存：
-    - 内存缓存和磁盘缓存结合。比如，LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
+    - 内存缓存和磁盘缓存结合。比如，`LruCache`将图片保存在内存，存取速度较快，退出APP后缓存会失效；而`DiskLruCache`将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比`LruCache`会慢上一些。
+
 
 
 #### 2.2 缓存策略有哪些
@@ -154,12 +155,12 @@
     - LruCache：内存淘汰缓存，内部使用LinkedHashMap，会淘汰最长时间未使用的对象
 - 磁盘缓存
     - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全。建议不要存储大数据，不支持跨进程！
-    - MMKV：腾讯开源存储库，内部采用mmpv。
+    - MMKV：腾讯开源存储库，内部采用mmap。
     - DiskLruCache：磁盘淘汰缓存，写入数据到file文件
     - SqlLite：移动端轻量级数据库。主要是用来对象持久化存储。
     - DataStore：旨在替代原有的 SharedPreferences，支持SharedPreferences数据的迁移
-    - Room：支持大型或复杂数据集
-    - Realm：支持大型或复杂数据集
+    - Room/Realm/GreenDao：支持大型或复杂数据集
+    - ![image](https://img-blog.csdnimg.cn/5b8aa43a3d864e478a85ae60ec712514.png)
 - 其他开源缓存库
     - ACache：一款高效二级存储库，采用内存缓存和磁盘缓存
 
@@ -196,6 +197,7 @@
     - 第一次通过`Context.getSharedPreferences()`进行初始化时，对`xml`文件进行一次读取，并将文件内所有内容（即所有的键值对）缓到内存的一个`Map`中，接下来所有的读操作，只需要从这个`Map`中取就可以
 
 
+
 #### 3.2 MMKV存储原理分析
 - 早期微信的需求
     - 微信聊天对话内容中的特殊字符所导致的程序崩溃是一类很常见、也很需要快速解决的问题；而哪些字符会导致程序崩溃，是无法预知的。
@@ -211,8 +213,12 @@
 - MMKV设计的原理
     - 内存准备：通过 mmap 内存映射文件，提供一段可供随时写入的内存块，App 只管往里面写数据，由操作系统负责将内存回写到文件，不必担心 crash 导致数据丢失。
     - 数据组织：数据序列化方面我们选用 protobuf 协议，pb 在性能和空间占用上都有不错的表现。
-    - 写入优化：考虑到主要使用场景是频繁地进行写入更新，我们需要有增量更新的能力。考虑将增量 kv 对象序列化后，append 到内存末尾。
-    - 空间增长：使用 append 实现增量更新带来了一个新的问题，就是不断 append 的话，文件大小会增长得不可控。我们需要在性能和空间上做个折中。
+    - 写入优化：考虑到主要使用场景是频繁地进行写入更新，需要有增量更新的能力。考虑将增量 kv 对象序列化后，append 到内存末尾。
+    - 空间增长：使用 append 实现增量更新带来了一个新的问题，就是不断 append 的话，文件大小会增长得不可控。需要在性能和空间上做个折中。
+- MMKV诞生的背景
+    - 针对该业务，高频率，同步，大量数据写入磁盘的需求。不管用sp，还是store，还是disk，还是数据库，只要在主线程同步写入磁盘，会很卡。
+    - 解决方案就是：使用内存映射mmap的底层方法，相当于系统为指定文件开辟专用内存空间，内存数据的改动会自动同步到文件里。
+    - **用浅显的话说：MMKV就是实现用「写入内存」的方式来实现「写入磁盘」的目标。内存的速度多快呀，耗时几乎可以忽略，这样就把写磁盘造成卡顿的问题解决了**。
 
 
 
@@ -239,6 +245,7 @@
     - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
 - DiskLruCache缓存基础原理流程图
     - ![image](https://img-blog.csdnimg.cn/dfa425359ffb4e24a5796f1c1a95986b.png)
+    - 关于DiskLruCache更多的原理解读，可以看：[AppLruDisk](https://github.com/yangchong211/YCCommonLib/tree/master/AppLruDisk)
 
 
 
@@ -258,7 +265,8 @@
 
 
 #### 3.6 HashMap存储分析
-
+- 内存缓存的场景
+    - 比如 SharedPreferences 存储中，就做了内存缓存的操作。
 
 
 
@@ -392,6 +400,7 @@
 
 #### 4.8 缓存数据加密
 - 思考一下，如果让你去设计数据的加密，你该怎么做？
+
 
 
 #### 4.9 缓存效率的对比
