feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -20,6 +20,7 @@
     - 3.6 HashMap存储分析
     - 3.7 Sqlite存储分析
     - 3.8 使用存储的注意点
+    - 3.9 各种数据存储文件
 - 04.通用缓存方案思路
     - 4.1 如何兼容不同缓存
     - 4.2 打造通用缓存Api
@@ -42,7 +43,7 @@
     - 6.4 降级设计
     - 6.5 异常设计说明
     - 6.6 兼容性设计
-    - 6.7 自测case设计
+    - 6.7 自测性设计
 - 07.通用Api设计
     - 7.1 如何依赖该库
     - 7.2 初始化缓存库
@@ -283,9 +284,32 @@
 - 针对MMKV使用建议有：
     - 如果项目中有高频率，同步存储数据，使用MMKV更加友好。
 - 针对DataStore使用建议有：
-    - 
+    - 建议在初始化的时候，使用全局上下文Context给DataStore设置存储路径。
 - 针对LruCache缓存使用建议：
     - 如果你使用“计量”淘汰策略，需要重写 SystemLruCache#sizeOf() 测量缓存单元的内存占用量，否则缓存单元的大小默认视为 1，相当于 maxSize 表示的是最大缓存数量。
+
+
+
+#### 3.9 各种数据存储文件
+- SharedPreferences 存储文件格式如下所示
+    ``` xml
+    <?xml version='1.0' encoding='utf-8' standalone='yes' ?>
+    <map>
+        <string name="name">杨充</string>
+        <int name="age" value="28" />
+        <boolean name="married" value="true" />
+    </map>
+    ```
+- MMKV 存储文件格式如下所示
+    - MMKV的存储结构，分了两个文件，一个数据文件，一个校验文件crc结尾。大概如下所示：
+    - ![image](https://img-blog.csdnimg.cn/5670ec7391404311b6d0b1909189ce67.png)
+    - ![image](https://img-blog.csdnimg.cn/0df33309100c4649b166d0b501413e9d.png)
+    - 这种设计最直接问题就是占用空间变大了很多，举一个例子，只存储了一个字段，但是为了方便MMAP映射，磁盘直接占用了8k的存储。
+- DiskCache 存储文件格式如下所示
+
+- DataStore 存储文件格式如下所示
+
+
 
 
 
@@ -340,6 +364,7 @@
         }
     }
     ```
+
 
 
 #### 4.4 缓存的过期处理
@@ -469,7 +494,28 @@
 
 
 #### 6.4 降级设计
-
+- 由于缓存方式众多，在该库中配置了降级，如何设置降级
+    ``` kotlin
+    //设置是否是debug模式
+    CacheConfig cacheConfig = builder.monitorToggle(new IMonitorToggle() {
+            @Override
+            public boolean isOpen() {
+                //todo 是否降级，如果降级，则不使用该功能。留给AB测试开关
+                return true;
+            }
+        })
+        //创建
+        .build();
+    CacheInitHelper.INSTANCE.init(this,cacheConfig);
+    ```
+- 降级后的逻辑处理是
+    - 如果是降级逻辑，则默认使用谷歌官方存储框架SharedPreferences。默认是不会降级的！
+    ``` java
+    if (CacheInitHelper.INSTANCE.isToggleOpen()){
+        //如果是降级，则默认使用sp
+        return SpFactory.create().createCache();
+    }
+    ```
 
 
 #### 6.5 异常设计说明
@@ -479,10 +525,20 @@
     - 如何解决：在项目中只在顶层调用一次 preferencesDataStore 方法，这样可以更轻松地将 DataStore 保留为单例。
 
 
+
 #### 6.6 兼容性设计
+- MMKV数据迁移比较难
+    - MMKV都是按字节进行存储的，实际写入文件把类型擦除了，这也是MMKV不支持getAll的原因，虽然说getAll用的不多问题不大，但是MMKV因此就不具备导出和迁移的能力。
+    - 比较好的方案是每次存储，多用一个字节来存储数据类型，这样占用的空间也不会大很多，但是具备了更好的可扩展性。
 
 
-#### 6.7 自测case设计
+
+#### 6.7 自测性设计
+- MMKV不太方便查看数据和解析数据
+    - 官方目前支持了5个平台，Android、iOS、Win、MacOS、python，但是没有提供解析数据的工具，数据文件和crc都是字节码，除了中文能看出一些内容，直接查看还是存在大量乱码。
+    - 比如线上出了问题，把用户的存储文件捞上来，还得替换到系统目录里，通过代码断点去看，这也太不方便了。
+- Sp，FastSp，DiskCache，Store等支持查看文件解析数据
+    - 傻瓜式的查看缓存文件，操作缓存文件。具体看该库：[MonitorFileLib磁盘查看工具](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorFileLib)
 
 
 
@@ -543,7 +599,32 @@
     double data6 = dataCache.readDouble("cacheKey5", 0.0);
     ```
 - 也可以通过注解的方式存储数据
-
+    ``` kotlin
+    class NormalCache : DataCache() {
+        @BoolCache(KeyConstant.HAS_ACCEPTED_PARENT_AGREEMENT, false)
+        var hasAcceptParentAgree: Boolean by this
+    }
+    
+    //如何使用
+    object CacheHelper {
+        //常规缓存数据,记录一些重要的信息,慎重清除数据
+        private val normal: NormalCache by lazy {
+            NormalCache().apply {
+                setCacheImpl(
+                    DiskCache.Builder()
+                        .setFileId("NormalCache")
+                        .build()
+                )
+            }
+        }
+        fun normal() = normal
+    }
+    
+    //存数据
+    CacheHelper.normal().hasAcceptParentAgree = true
+    //取数据
+    val hasAccept = CacheHelper.normal().hasAcceptParentAgree
+    ```
 
 
 #### 7.5 查看缓存文件数据
