feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -88,7 +88,7 @@
     - 问题7-变更回调：由于业务层可能有监听 K-V 变更的需求，因此框架有必要支持变更回调监听，并且防止出现内存泄漏；
     - 问题8-多进程：由于程序可能有多进程需求，那么框架如何保证多进程数据同步？
     - 问题9-可用性：由于程序运行中存在不可控的异常和 Crash，因此框架有必要尽可能保证系统可用性，尽量保证系统在遇到异常后的数据完整性；
-    - 问题10-高效性：性能永远是要考虑的问题，解析、读取、写入和序列化的性能如何提高和权衡；
+    - **问题10-高效性：性能永远是要考虑的问题，解析、读取、写入和序列化的性能如何提高和权衡**；
     - 问题11-安全性：如果程序需要存储敏感数据，如何保证数据完整性和保密性；
     - 问题12-数据迁移：如果项目中存在旧框架，如何将数据从旧框架迁移至新框架，并且保证可靠性；
     - 问题13-研发体验：是否模板代码冗长，是否容易出错。各种K—V框架使用体验如何？
@@ -104,11 +104,13 @@
     - 每一种缓存，总会有一个最大的容量，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
 
 
+
 #### 1.4 设计目标
 - 打造通用存储库：
     - 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
 - 内部开源该库：
     - **作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口**。
+
 
 
 #### 1.5 产生收益分析
@@ -137,8 +139,8 @@
     - 当缓存满了之后，再想其添加缓存，这个时候就需要删除一些旧的缓存并添加新的缓存。这个跟线程池满了以后的线程处理策略相似！
 - 缓存的常见的策略有那些
     - FIFO(first in first out)：先进先出策略，相似队列。
-    - LFU(less frequently used)：最少使用策略，RecyclerView的缓存采用了此策略。
-    - LRU(least recently used):最近最少使用策略，Glide在进行内存缓存的时候采用了此策略。
+    - LFU(less frequently used)：最少使用策略，`RecyclerView`的缓存采用了此策略。
+    - LRU(least recently used):最近最少使用策略，`Glide`在进行内存缓存的时候采用了此策略。
 
 
 
@@ -147,6 +149,7 @@
     - Map，LruCache等等
 - 磁盘缓存：后台应用有可能会被杀死，那么相应的内存缓存对象也会被销毁。当你的应用重新回到前台显示时，你需要用到缓存数据时，这个时候可以用磁盘缓存。
     - SharedPreferences，MMKV，DiskLruCache，SqlLite，DataStore，Room，Realm，GreenDao等等
+
 
 
 #### 2.4 市面存储方案说明
@@ -178,8 +181,8 @@
 - 存储方案DiskLruCache的不足
     - 1.
 - 存储方案DataStore的不足
-    - 1.
-
+    - 1.只是提供异步API，没有提供同步API方法。在进行大量同步存储的时候，使用runBlocking同步数据可能会卡顿。
+    - 2.对主线程执行同步 I/O 操作可能会导致 ANR 或界面卡顿。可以通过从 DataStore 异步预加载数据来减少这些问题。
 
 
 
@@ -236,6 +239,19 @@
 - LruCache策略能否增加灵活性
     - 在缓存容量满时淘汰，除了这个策略之外，能否再增加一些辅助策略，例如在 Java 堆内存达到某个阈值后，对 LruCache 使用更加激进的清理策略。
     - 比如：Glide 除了采用 LRU 策略淘汰最早的数据外，还会根据系统的内存紧张等级 onTrimMemory(level) 及时减少甚至清空 LruCache。
+    ``` java
+    /**
+     * 这里是参考glide中的lru缓存策略，低内存的时候清除
+     * @param level             level级别
+     */
+    public void trimMemory(int level) {
+        if (level >= android.content.ComponentCallbacks2.TRIM_MEMORY_BACKGROUND) {
+            clearMemory();
+        } else if (level >= android.content.ComponentCallbacks2.TRIM_MEMORY_UI_HIDDEN || level == android.content.ComponentCallbacks2.TRIM_MEMORY_RUNNING_CRITICAL) {
+            trimToSize(maxSize() / 2);
+        }
+    }
+    ```
     - 关于Lru更多的原理解读，可以看：[AppLruCache](https://github.com/yangchong211/YCCommonLib/tree/master/AppLruCache)
 
 
