--- a/Read/ReadMeWiki/08.思考系列/10.Android数据存储设计.md
+++ b/Read/ReadMeWiki/08.思考系列/10.Android数据存储设计.md
@@ -8,7 +8,16 @@
 - 06.MMKV的存储分析
 - 07.Room数据库分析
 - 08.去黑科技mmap理解
+- 09.DiskLruCache
 
+
+
+
+### 01.有哪些存储的框架
+- LruCache
+    - [AppLruCache](https://github.com/yangchong211/YCCommonLib/tree/master/AppLruCache)
+- LruDiskCache
+    - [AppLruDisk](https://github.com/yangchong211/YCCommonLib/tree/master/AppLruDisk)
 
 
 
@@ -51,7 +60,6 @@
 
 
 
-
 ### 05.DataStore原理
 #### 5.1 DataStore介绍
 - DataStore包含了两种实现方式：
@@ -60,6 +68,9 @@
 - DataStore初始化遇到的坑
     - 不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
     - 具体看：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
+- 一些问题思考分析
+    - 以事务方式处理更新数据，如何保证事务有四大特性（原子性、一致性、 隔离性、持久性）？
+
 
 
 #### 5.2 DataStore原理分析
