feat：完善通用缓存存储框架的设计

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -320,8 +320,8 @@
     - ![image](https://img-blog.csdnimg.cn/5670ec7391404311b6d0b1909189ce67.png)
     - ![image](https://img-blog.csdnimg.cn/0df33309100c4649b166d0b501413e9d.png)
     - 这种设计最直接问题就是占用空间变大了很多，举一个例子，只存储了一个字段，但是为了方便MMAP映射，磁盘直接占用了8k的存储。
-- DiskCache 存储文件格式如下所示
-
+- LruDiskCache 存储文件格式如下所示
+    - 
 - DataStore 存储文件格式如下所示
 
 
