--- a/Read/ReadMeWiki/06.Framework/05.Android程序UI框架.md
+++ b/Read/ReadMeWiki/06.Framework/05.Android程序UI框架.md
@@ -13,8 +13,9 @@
     - 3.1 UI的绘制流程
     - 3.2 软件渲染过程
     - 3.3 硬件渲染过程
-
-
+- 04.UI的绘制时机
+    - 4.1 UI的绘制时机
+    - 4.2 系统的VSync实现
 
 
 
@@ -80,6 +81,31 @@
 
 
 #### 3.3 硬件渲染过程
+- 硬件渲染过程
+    - ![image](https://img-blog.csdnimg.cn/4a028fb560474b85ba3756b9c26f7149.png)
+
+
+
+### 04.UI的绘制时机
+#### 4.1 UI的绘制时机
+- Android应用程序UI的绘制时机 – Without Vsync -- Jank
+    - ![image](https://img-blog.csdnimg.cn/2b36c8cc39af47db86046583bef92db7.png)
+- Android应用程序UI的绘制时机 – With VSync
+    - ![image](https://img-blog.csdnimg.cn/aa460ac4e99748d0809974beb6fe829b.png)
+- Android应用程序UI的绘制时机 – With Vsync and Double Buffering
+    - ![image](https://img-blog.csdnimg.cn/b5267cc312144817b6dbee7a19ef140b.png)
+- Android应用程序UI的绘制时机 – With Vsync and Triple Buffering
+    - ![image](https://img-blog.csdnimg.cn/f2c09418386d429788075973ec0c5e4d.png)
+
+
+
+#### 4.2 系统的VSync实现
+- SurfaceFlinger内部维护有一个EventThread，用来监控显卡的VSync事件
+- Android应用程序通过注册一个DisplayEventReceiver来接收SurfaceFlinger的VSync事件
+- Android应用程序接收到重绘UI请求，通过前面注册的DisplayEventReceiver向SurfaceFlinger请求在下一个VSync事件到来时产生一个VSync通知
+- Android应用程序获得VSync通知的时候，才会真正执行重绘UI的请求
+
+
 
 
 
