--- a/Read/ReadMeWiki/09.问题面试/07.设计模式问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/07.设计模式问题汇总.md
@@ -68,8 +68,7 @@
 
 
 ### 10.策略者模式问题
-- 阐述一下使用策略者模式的应用场景？
-- 如何针对冗长的 if-else 或 switch 分支进行架构层面优化，增强框架拓展？
-
+- 阐述一下使用策略者模式的应用场景？如何针对冗长的 if-else 或 switch 分支进行架构层面优化，增强框架拓展？
+- 场景分析题，针对贩卖各类书籍的电子商务网站，根据用户vip等级进行折扣，你如何实现？实现策略者模式的结构是怎么样的？
 
 
