--- a/Read/ReadShareWiki/08.技术管理/06.技术标准化实践.md
+++ b/Read/ReadShareWiki/08.技术管理/06.技术标准化实践.md
@@ -71,7 +71,8 @@
 - 同学认领之后，能完成更好，但并不⼀定能⼀次性完成，这⾥应当认可推进的成果，推进包括：
     - 任务拆分，将⼀个任务拆解成⼀系列任务组
     - 部分解决，完成⼀部分任务的解决
-其实，问题公告板，也应该有个像需求那样的机制化，实体化，并且与每一版本相关联。有⼀个模块就是⼀个模块，有⼀个功能就是⼀个功能。这样⼤家也能够维护起来。
+- 其实，问题公告板，也应该有个像需求那样的机制化，实体化，并且与每一版本相关联。
+    - 有⼀个模块就是⼀个模块，有⼀个功能就是⼀个功能。这样⼤家也能够维护起来。
 
 
 
