--- a/Read/ReadMeWiki/09.问题面试/00.技术招聘的方法论.md
+++ b/Read/ReadMeWiki/09.问题面试/00.技术招聘的方法论.md
@@ -8,14 +8,15 @@
 - 07.实习生面试标准
 - 08.定级别关键点
 - 09.面试重点介绍
+- 10.面试官素质
 
 
 
 ### 01.技术基础知识
 - **主要包含Android基础知识、网络、算法、数据结构，如果面试者所学专业非计算机相关，需要着重看下基础方面**。
 - Android基础，举个例子：View的Touch事件分发如何？基础：ViewGroup和View的时间分发；深入：系统如何将事件分发到ViewGroup？View的绘制流程（可与Activity、Window结合）
-- JAVA基础，举个例子：为什么会有线程不安全的现象？如何实现线程安全？常见的线程安全数据结构有哪些？锁的分类有哪些？
-- 网络基础，举个例子：Http中GET和POST区别、DNS解析作用？HTTPS为什么安全？如果想获取通信的内容，该怎么做？
+- JAVA基础，举个例子：为什么会有线程不安全的现象？如何实现线程安全？常见的线程安全数据结构有哪些？锁的分类有哪些？如何避免死锁？
+- 网络基础，举个例子：Http中GET和POST区别、DNS解析作用？HTTPS为什么安全？CA证书如何校验？如果想获取通信的内容，该怎么做？
 
 
 ### 02.项目经验考察
@@ -70,7 +71,7 @@
 
 ### 08.定级别关键点
 - P6(一般3到6年)重点关注面试内容中的1和2，对于内容3需要对常见的设计模式和分层架构有了解。
-- P7(一般4到8年)重点关注面试内容中的2、3、4，架构方面有实际的设计经验，对某一方面知识有深度的理解。
+- P7(一般4到10年)重点关注面试内容中的2、3、4，架构方面有实际的设计经验，对某一方面知识有深度的理解。
 - 软素质方面都需要关注，基础满足沟通能力好，团队合作无问题。P7如果负责过独立的项目，需要对项目管理方面有一定的理解。
 
 
@@ -78,11 +79,14 @@
 ### 09.面试重点介绍
 - 一面二面，主要是技术面试，对面试内容1~5都需要考察，但每轮面试有不同关注重点。一面重点关注1，2，3；二面重点关注3，4，5
 - 三面，主要是技术leader面试，主要是3，4，5考察，但不仅仅局限于技术，而是解决技术难题的思路，以及闭环思维。
-- 四面，主要是人事沟通，主要是5考察，职业方向，过往经历，这个时候就需要吹牛逼呢。
+- 四面，主要是部门leader沟通，主要是5考察，职业方向，过往经历，这个时候就需要吹牛逼呢。
 - 五面，主要是人事交叉面试，和四面差不多。一般P6大概是4面，P7以及以上一般是5面甚至更多。
 - 面试评价。评价里需要写上问的问题，和简答写回答情况，哪些答的好，哪些不好；如果面试者有些技术 面试官不了解，可以交换面试官交叉面试。
 
 
+### 10.面试官素质
+- 能挖掘人的亮点：循序渐进地考察面试者的项目经历，由浅入深的问。能够挖掘开发亮点，解决问题的思路，分析问题的过程等。
+- 
 
 
 
